--- a/contactInfo.html
+++ b/contactInfo.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <nav>
+<body class="green lighten-5">
+    <nav class="teal lighten-1">
         <div class="container center nav-wrapper">
             <a href="#" class="brand-logo">Alexander Talberg</a>
 
@@ -21,7 +21,7 @@
     <nav>
         <div class="center nav-wrapper">
             <nav>
-                <div class=" container nav-wrapper">
+                <div class=" container  nav-wrapper">
 
                     <ul id="nav-mobile" class="center">
                         <li><a href="index.html">About Me</a></li>
@@ -32,15 +32,15 @@
             </nav>
 
     </nav>
-    <div class="container">
+    <div class="container info-block orange lighten-4">
         <div class="row">
             <div class="col s4"> <img class="responsive-img profile-pic"
                     src="https://scontent.fapa1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70142316_2621204874557436_2374673669768085504_o.jpg?_nc_cat=103&_nc_ohc=0F-JpZyN-QUAQmse7ucbCkM0b9H-HCyHBY2_SkUY72_b1z8Hj3QhgCxkQ&_nc_ht=scontent.fapa1-1.fna&oh=21326b4b031568275ba1349b256a98ee&oe=5E890F82"
                     alt="Alexander Talberg">
             </div>
             <div class="col s8">
-                <h2>Contact Me:</h2>
-                <ul>
+                <h2 class>Contact Me:</h2>
+                <ul class="yellow lighten-5 info-block">
                     <li class="flow-text" >Email: Alexandermtalberg@gmail.com</li class="flow-text">
                     <li class="flow-text" >Cell Phone: 1-303-908-3446</li> 
                     <li class="flow-text" >Address: 565 Mohawk Dr. Apt C3, Boulder,CO 80303 </li>
