--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <nav>
+<body class="green lighten-5">
+    <nav class="teal lighten-1">
         <div class="container center nav-wrapper">
             <a href="#" class="brand-logo">Alexander Talberg</a>
 
     </nav>
-    <nav>
-        <div class="center nav-wrapper">
+    <nav class="teal">
+        <div class="center teal nav-wrapper">
             <nav>
                 <div class=" container nav-wrapper">
 
@@ -33,7 +33,7 @@
 
     </nav>
     <div class="container">
-        <div class="row">
+        <div class="row info-block orange lighten-4">
             <div class="col s4"> <img class="responsive-img profile-pic"
                     src="https://scontent.fapa1-1.fna.fbcdn.net/v/t1.0-9/s960x960/70142316_2621204874557436_2374673669768085504_o.jpg?_nc_cat=103&_nc_ohc=0F-JpZyN-QUAQmse7ucbCkM0b9H-HCyHBY2_SkUY72_b1z8Hj3QhgCxkQ&_nc_ht=scontent.fapa1-1.fna&oh=21326b4b031568275ba1349b256a98ee&oe=5E890F82"
                     alt="Alexander Talberg">
