--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <nav>
+<body class="green lighten-5">
+    <nav class="teal lighten-1">
         <div class="container center nav-wrapper">
             <a href="index.html" class="brand-logo">Alexander Talberg</a>
 
@@ -32,7 +32,7 @@
             </nav>
 
     </nav>
-    <div class="container">
+    <div class="container info-block orange lighten-4">
         <div class="row">
             <div class="col s12">
                 <h2>Portfolio:</h2>
